# ClawMesh

./: .env.example  ACCURATE_AGENT_CODE_AUDIT_REPORT.md  AEROSPACE_GRADE_CERTIFICATION_REPORT.md  AEROSPACE_GRADE_IMPLEMENTATION_PLAN.md  AEROSPACE_GRADE_IMPLEMENTATION_SUMMARY.md  AGENT_API_AUDIT_REPORT.md  AGENT_API_COMPLETION_REPORT.md  AGENT_FEATURE_COMPARISON_MOLTBOOK.md  AGENT_MOLTBOOK_FEATURES_COMPLETION_REPORT.md  AGENT_REPUTATION_SKILL_IMPLEMENTATION_PROGRESS.md  CLAWMEET_16_LANGUAGES_GUIDE.md  CLAWMEET_FINAL_PROJECT_SUMMARY.md  CLAWMEET_FINAL_STATUS.md  CLAWMEET_FINAL_SUMMARY.md  CLAWMEET_I18N_GUIDE.md  CLAWMEET_INTEGRATION.md  CLAWMEET_KNOWN_ISSUES.md  CLAWMEET_LEMMY_ENHANCEMENT_STRATEGY.md  CLAWMEET_QUICKSTART.md  CLAWMEET_README.md  CLAWMEET_SERVER_GUIDE.md  CLAWMEET_SETUP.md  CLAWMEET_UI_GUIDE.md  CLAWMESH_CODE_AUDIT_REPORT.md  CLAWMESH_COMPREHENSIVE_TEST_REPORT.md  CLAWMESH_FINAL_MCDC_REPORT.md  CLAWMESH_FINAL_TEST_REPORT.md  CLAWMESH_LEMMY_INTEGRATION_FINAL_REPORT.md  CLAWMESH_MCDC_COVERAGE_REPORT.md  CLAWMESH_PERFORMANCE_TEST_REPORT.md  CLAWMESH_PROJECT_COMPLETION_REPORT.md  CLAWMESH_README.md  CODE_COMPLETION_SUMMARY.md  COMPILATION_FIXES.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_SESSION_SUMMARY.md  COMPREHENSIVE_CODE_AUDIT_MOLTBOOK_COMPARISON.md  Cargo.toml  Cargo.toml.benchmark  DATABASE_MIGRATION_GUIDE.md  (+62 more)
audit_reports/: audit_20260313_185311.txt  clippy_20260313_185311.txt  docs_20260313_185311.txt  tests_20260313_185311.txt  (+1 more)
crates/clawmesh/agent/: Cargo.toml
crates/clawmesh/agent/src/: heartbeat.rs  install.rs  lib.rs  lib_tests.rs  list.rs  models.rs  tests.rs  validation.rs
crates/clawmesh/agent/tests/: mcdc_tests.rs
crates/clawmesh/api/: Cargo.toml
crates/clawmesh/api/src/: agent.rs  agent_auth.rs  agent_list.rs  agent_marketplace.rs  agent_reputation.rs  agent_skills.rs  agent_social.rs  agent_workspace.rs  auth.rs  config.rs  credit.rs  direct_message.rs  error.rs  friendship.rs  graceful_shutdown.rs  health.rs  lemmy_api_v3.rs  lemmy_extensions.rs  lemmy_routes_integration.rs  lib.rs  lib_tests.rs  metrics.rs  permissions.rs  rate_limit.rs  rate_limiter.rs  responses.rs  routes.rs  stats.rs
crates/clawmesh/api/tests/: agent_api_tests.rs  agent_auth_tests.rs  agent_crud_tests.rs  agent_reputation_tests.rs  agent_skills_tests.rs  direct_message_tests.rs  friendship_tests.rs  integration_tests.rs  marketplace_api_tests.rs  reputation_api_tests.rs  skills_api_tests.rs  social_api_tests.rs  workspace_api_tests.rs
crates/clawmesh/audit/: Cargo.toml
crates/clawmesh/audit/src/: lib.rs  models.rs
crates/clawmesh/benchmarks/: Cargo.toml
crates/clawmesh/benchmarks/benches/: agent_benchmarks.rs  reputation_benchmarks.rs  skills_benchmarks.rs
crates/clawmesh/db_schema/: Cargo.toml
crates/clawmesh/db_schema/src/: lemmy_schema_integration.rs  lib.rs  schema.rs
crates/clawmesh/db_schema/src/source/: encryption_key.rs  friendship.rs
crates/clawmesh/db_schema/tests/: encryption_key_tests.rs
crates/clawmesh/filemanager/: Cargo.toml
crates/clawmesh/filemanager/src/: lib.rs  metadata.rs  storage.rs  thumbnail.rs  upload.rs
crates/clawmesh/friendship/: Cargo.toml
crates/clawmesh/friendship/src/: block.rs  friendship.rs  lib.rs  request.rs
crates/clawmesh/integration_tests/: Cargo.toml
crates/clawmesh/integration_tests/src/: lib.rs
crates/clawmesh/integration_tests/tests/: agent_integration_test.rs  credit_integration_test.rs
crates/clawmesh/messaging/: Cargo.toml
crates/clawmesh/messaging/src/: cluster.rs  delivery.rs  direct.rs  errors.rs  file_storage.rs  lib.rs  offline_cache.rs  p2p_disk_storage.rs  p2p_signaling.rs  p2p_transfer.rs  persistence.rs  redis_queue.rs  ring_encryption.rs  sharded_cache.rs  sharded_connection_manager.rs  websocket.rs
crates/clawmesh/messaging/tests/: aerospace_grade_tests.rs  integration_tests.rs  p2p_integration_tests.rs  p2p_integrity_tests.rs  performance_test.rs  websocket_tests.rs
crates/clawmesh/notification/: Cargo.toml
crates/clawmesh/notification/src/: dispatcher.rs  email.rs  inapp.rs  lib.rs  push.rs
crates/clawmesh/realtime/: Cargo.toml  README.md
crates/clawmesh/realtime/src/: connection.rs  lib.rs  manager.rs  messages.rs  session.rs
crates/clawmesh/reputation/: Cargo.toml
crates/clawmesh/reputation/src/: lib.rs  models.rs  reputation.rs  votes.rs
crates/clawmesh/reputation/tests/: integration_tests.rs  mcdc_tests.rs  unit_tests.rs
crates/clawmesh/scheduler/: Cargo.toml
crates/clawmesh/scheduler/src/: lib.rs  tasks.rs
crates/clawmesh/search/: Cargo.toml
crates/clawmesh/search/src/: engine.rs  lib.rs  query.rs  ranking.rs  recommendation.rs
crates/clawmesh/skills/: Cargo.toml
crates/clawmesh/skills/src/: lib.rs  marketplace.rs  models.rs  sandbox.rs  security.rs  skills.rs
crates/clawmesh/skills/tests/: integration_tests.rs  mcdc_tests.rs  unit_tests.rs
crates/clawmesh/social/: Cargo.toml
crates/clawmesh/social/src/: bookmarks.rs  comments.rs  feed.rs  follows.rs  lemmy_integration.rs  lib.rs  models.rs  notifications.rs  posts.rs  votes.rs
crates/clawmesh/social/tests/: integration_tests.rs  mcdc_tests.rs  unit_tests.rs
crates/clawmesh/tests/: Cargo.toml  concurrent_tests.rs  credit_logic_test.rs  integration_test.rs  validation_test.rs
crates/clawmesh/tests/src/: lemmy_integration_tests.rs  lib.rs
crates/clawmesh/ui/: Cargo.toml
crates/clawmesh/ui/src/: error_handlers.rs  i18n.rs  i18n_translations.rs  i18n_translations_part2.rs  lib.rs  routes.rs  routes_i18n.rs  routes_with_db.rs  templates.rs  templates_i18n.rs
crates/clawmesh/ui/templates/: agent.html  agent_i18n.html  credit.html  credit_i18n.html  error_404.html  error_500.html  index.html  index_i18n.html  stats.html  stats_i18n.html
crates/clawmesh/ui/tests/: i18n_tests.rs  performance_tests.rs  security_tests.rs  template_tests.rs  ui_tests.rs
crates/clawmesh/workspace/: Cargo.toml
crates/clawmesh/workspace/src/: activities.rs  lib.rs  members.rs  models.rs  tasks.rs  workspace.rs
crates/clawmesh/workspace/tests/: boundary_tests.rs  integration_tests.rs  unit_tests.rs
(+130 files in other folders)
