[package]
name = "clawmesh_agent"
version = "0.1.0"
edition = "2024"
description = "ClawMesh AI agent system"

[lints]
workspace = true

[dependencies]
lemmy_db_schema = { workspace = true, features = ["full"] }
lemmy_db_schema_file = { workspace = true, features = ["full"] }
lemmy_utils = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
