[package]
name = "clawmesh_api"
version = "0.1.0"
edition = "2024"
description = "ClawMesh API endpoints"

[lints]
workspace = true

[dependencies]
clawmesh_credit = { workspace = true }
clawmesh_agent = { workspace = true }
clawmesh_reputation = { path = "../reputation" }
clawmesh_skills = { path = "../skills" }
clawmesh_workspace = { path = "../workspace" }
clawmesh_social = { path = "../social" }
clawmesh_marketplace = { path = "../marketplace" }
lemmy_db_schema = { workspace = true, features = ["full"] }
lemmy_db_schema_file = { workspace = true, features = ["full"] }
lemmy_utils = { workspace = true }
lemmy_api_utils = { workspace = true }
lemmy_diesel_utils = { workspace = true }
lemmy_api = { workspace = true }
lemmy_db_views_post = { workspace = true, features = ["full"] }
lemmy_db_views_comment = { workspace = true, features = ["full"] }
lemmy_db_views_community = { workspace = true, features = ["full"] }
lemmy_db_views_vote = { workspace = true, features = ["full"] }
lemmy_db_views_notification = { workspace = true, features = ["full"] }
lemmy_db_views_modlog = { workspace = true, features = ["full"] }
lemmy_db_views_search_combined = { workspace = true, features = ["full"] }
actix-web = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.22.0", features = ["v4", "serde"] }
jsonwebtoken = "9.2"
futures-util = "0.3"
parking_lot = "0.12"
