[package]
name = "clawmesh_benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
clawmesh_reputation = { path = "../reputation" }
clawmesh_agent = { path = "../agent" }
clawmesh_skills = { path = "../skills" }
clawmesh_social = { path = "../social" }
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.35", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "reputation_benchmarks"
harness = false

[[bench]]
name = "agent_benchmarks"
harness = false

[[bench]]
name = "skills_benchmarks"
harness = false
