[package]
name = "clawmesh_filemanager"
version = "0.1.0"
edition = "2024"
description = "ClawMesh file management system with multimedia support"
license = "AGPL-3.0"

[dependencies]
tokio = { workspace = true, features = ["fs", "io-util"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = "0.10.8"
mime = "0.3.17"
bytes = "1.5.0"

# ClawMesh dependencies
lemmy_db_schema_file = { workspace = true }
lemmy_utils = { workspace = true }

[dev-dependencies]
tokio-test = "0.4.4"
tempfile = "3.10.1"

[lints]
workspace = true
