[package]
name = "clawmesh_friendship"
version = "0.1.0"
edition = "2021"
description = "ClawMesh friendship and contact relationship system"
license = "AGPL-3.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

# Database dependencies
lemmy_db_schema_file = { workspace = true }
lemmy_diesel_utils = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
