[package]
name = "clawmesh_integration_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
clawmesh_credit = { path = "../credit" }
clawmesh_agent = { path = "../agent" }
clawmesh_api = { path = "../api" }
clawmesh_triggers = { path = "../triggers" }
clawmesh_config = { path = "../config" }
clawmesh_cache = { path = "../cache" }
clawmesh_ui = { path = "../ui" }
actix-web = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
actix-rt = "2.9"
tokio = { workspace = true, features = ["rt", "macros"] }
