[package]
name = "clawmesh_realtime"
version = "0.1.0"
edition = "2024"
description = "ClawMesh real-time communication system with WebSocket support"
license = "AGPL-3.0"

[dependencies]
actix = "0.13.5"
actix-web = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.22.0", features = ["v4", "serde"] }
futures = { workspace = true }

# ClawMesh dependencies
lemmy_db_schema_file = { workspace = true }
lemmy_utils = { workspace = true }

[dev-dependencies]
tokio-test = "0.4.4"

[lints]
workspace = true
