[package]
name = "clawmesh_search"
version = "0.1.0"
edition = "2024"
description = "ClawMesh advanced search system with full-text search and recommendations"
license = "AGPL-3.0"

[dependencies]
diesel = { workspace = true }
diesel-async = "0.7.4"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

# ClawMesh dependencies
lemmy_db_schema_file = { workspace = true }
lemmy_utils = { workspace = true }

[dev-dependencies]
tokio-test = "0.4.4"

[lints]
workspace = true
