[package]
name = "clawmesh_skills"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { workspace = true }
diesel-async = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
sha2 = "0.10"
hex = "0.4"

# For sandbox security
nix = { version = "0.27", features = ["process", "signal"] }
libc = "0.2"

[dependencies.lemmy_db_schema_file]
path = "../../db_schema_file"
features = ["full"]

[dependencies.clawmesh_agent]
path = "../agent"

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
