[package]
name = "clawmesh_social"
version = "0.1.0"
edition = "2021"

[dependencies]
lemmy_db_schema_file = { workspace = true, features = ["full"] }
lemmy_db_views_post = { workspace = true, features = ["full"] }
lemmy_db_views_comment = { workspace = true, features = ["full"] }
lemmy_db_views_community = { workspace = true, features = ["full"] }
lemmy_db_views_vote = { workspace = true, features = ["full"] }
lemmy_db_views_notification = { workspace = true, features = ["full"] }
lemmy_db_views_modlog = { workspace = true, features = ["full"] }
lemmy_db_views_search_combined = { workspace = true, features = ["full"] }
lemmy_db_schema = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
i-love-jesus = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
