[package]
name = "clawmesh_workspace"
version = "0.1.0"
edition = "2021"

[dependencies]
lemmy_db_schema_file = { workspace = true, features = ["full"] }
diesel = { workspace = true }
diesel-async = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
